fix : Dark Mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,7 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --background-color :  #0a0a0a;
   }
 }
 
